# mobilisation

./: .gitignore  Cargo.toml  README.md  meson.build  space.soulie.mobilisation.json
data/: meson.build  space.soulie.mobilisation.desktop.in  space.soulie.mobilisation.gschema.xml  space.soulie.mobilisation.metainfo.xml.in  space.soulie.mobilisation.service.in
data/icons/: meson.build
graphql/: config.graphql  events.graphql  schema.json
po/: POTFILES.in  meson.build
src/: api.rs  application.rs  config.rs  domain.rs  event_preview.rs  event_preview.ui  event_preview_model.rs  main.rs  meson.build  mobilisation.gresource.xml  mobilizon.rs  sidebar.rs  sidebar.ui  sidebar_header.rs  sidebar_header.ui  sidebar_row.rs  sidebar_row.ui  window.rs  window.ui
src/core/: category.rs  event.rs  instance_version.rs  mod.rs
src/infra/: config.rs  events.rs
src/presentation/: display.rs
