[package]
name = "mobilisation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
graphql_client = { version = "0.14.0" }
reqwest = { version = "0.12.23", features = ["json"]}
serde = "1.0.219"
url = "2.5.7"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
